@@ -1,6 +1,6 @@
 File Name: CHANGES
 
-05/07/2015 FASP 1.7.3:
+05/09/2015 FASP 1.7.3:
 - Fix a bug: cmake does not recognize CC env variable sometimes.
 - Fix a bug: ILU static memory allocation causes seg fault for large problems.
 - Fix a bug: ILU "implicit none" missing.
@@ -8,10 +8,11 @@ File Name: CHANGES
 - Fix a bug: array out of bound in GMG 2D case.
 - Fix memory leakage in base/src/coarsening_rs.c.
 - Fix memory leakage in base/src/pgcr.c.
+- Clean up pvfgmres for stopping types.
 
 04/26/2015 FASP 1.7.2:
 - Fix a bug: Output of Krylov methods with saft-net.
-- Move the NAN checking so that Fortran NaN runtime exception does not appear.
+- Move the NaN checking so that Fortran NaN runtime exception does not appear.
 - Remove some unwanted test code.
 - Fix a bug: ILU setup memory allocation size is not right.
 - Fix a bug: Change ILU static memory to dynamic allocation.
